objects/Email_Help_SubOption__c.object
<CustomObject>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Key__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Type Key</label>
        <referenceTo>Email_Help_Option__c</referenceTo>
        <relationshipLabel>Email Help SubOption</relationshipLabel>
        <relationshipName>Email_Help_SubOption</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Email Help SubOption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Email_Help_Sub_Options</fullName>
        <columns>NAME</columns>
        <columns>Type_Key__c</columns>
        <columns>Sub_Type__c</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <label>Email Help Sub-Options</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>SubType Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Help SubOption</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>